Day 30/alb.tf
resource "aws_lb" "app_lb" {
    name               = "app-load-balancer"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb_sg.id]
    subnets            = aws_subnet.public[*].id

    enable_deletion_protection = false
    idle_timeout               = 60

    tags = {
        Name = "app-load-balancer"
    }
}

resource "aws_lb_target_group" "app_tg" {
    name     = "app-target-group"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.main.id

    health_check {
        path                = "/"
        interval            = 30
        timeout             = 5
        healthy_threshold   = 2
        unhealthy_threshold = 2
    }

    tags = {
        Name = "app-target-group"
    }
}

resource "aws_lb_listener" "http_listener" {
    load_balancer_arn = aws_lb.app_lb.arn
    port              = 80
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.app_tg.arn
    }
}
